--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "react": "^0.14.7",
-    "react-native": "^0.22.2",
+    "react-native": "0.23.0-rc4",
     "firebase": "^2.4.1"
   }
 }
