--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "firebase": "^2.4.1",
     "react": "^0.14.7",
     "react-native": "0.23.0-rc4",
-    "react-native-fbsdkcore": "0.0.8",
-    "react-native-fbsdklogin": "0.0.8",
-    "react-native-fbsdkshare": "0.0.8"
+    "react-native-fbsdk": "^0.1.0"
   }
 }
