--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "firebase": "^2.4.2",
     "react": "15.0.2",
-    "react-native": "^0.26.0"
+    "react-native": "^0.26.0",
+    "react-native-fbsdk": "^0.2.0"
   }
 }
