--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "firebase": "^2.4.2",
     "react": "15.0.2",
+    "react-mixin": "^2.0.2",
     "react-native": "^0.26.0",
-    "react-native-fbsdk": "^0.2.0"
+    "react-native-fbsdk": "^0.2.0",
+    "react-timer-mixin": "^0.13.3"
   }
 }
