--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-mixin": "^2.0.2",
     "react-native": "^0.26.0",
     "react-native-fbsdk": "^0.2.0",
+    "react-native-message-composer": "0.0.4",
     "react-timer-mixin": "^0.13.3"
   }
 }
