--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react-native-fbsdk": "^0.2.0",
     "react-native-message-composer": "0.0.4",
     "react-timer-mixin": "^0.13.3"
+  },
+  "devDependencies": {
+    "gulp-watch": "^4.3.8"
   }
 }
