--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.0.2",
     "react-mixin": "^2.0.2",
     "react-native": "^0.26.0",
+    "react-native-contacts": "^0.3.0",
     "react-native-fbsdk": "^0.2.0",
     "react-native-message-composer": "0.0.4",
     "react-timer-mixin": "^0.13.3"
