--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-react-native"
   },
   "dependencies": {
     "firebase": "^2.4.2",
@@ -16,9 +20,15 @@
     "react-redux": "^4.4.5",
     "react-timer-mixin": "^0.13.3",
     "redux": "^3.6.0",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "gulp-watch": "^4.3.8"
+    "babel-jest": "^17.0.2",
+    "babel-preset-react-native": "^1.9.0",
+    "gulp-watch": "^4.3.8",
+    "jest": "^17.0.3",
+    "jest-react-native": "^17.0.3",
+    "react-test-renderer": "^15.4.0"
   }
 }
