--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-contacts": "^0.5.2",
     "react-native-fbsdk": "^0.4.0",
     "react-native-message-composer": "^0.1.0",
+    "react-native-simple-store": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-timer-mixin": "^0.13.3",
     "redux": "^3.6.0",
@@ -23,13 +24,13 @@
     "preset": "react-native"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
+    "babel-core": "^6.18.2",
     "babel-jest": "17.0.2",
     "babel-preset-react-native": "1.9.0",
-    "enzyme": "^2.6.0",
     "jest": "17.0.3",
     "jest-react-native": "^17.0.3",
     "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
     "react-native-mock": "^0.2.8",
     "react-test-renderer": "15.4.1",
     "redux-mock-store": "^1.2.1"
