--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react-native": "1.9.0",
     "jest": "17.0.3",
     "jest-react-native": "^17.0.3",
+    "react-addons-perf": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-native-mock": "^0.2.8",
     "react-test-renderer": "15.4.1",
