Fabric and Crashlytics, initial install

--- a/ios/ShowMe/Info.plist
+++ b/ios/ShowMe/Info.plist
@@ -29,6 +29,20 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>43da662405df03e1853b4bcd49f8eeca5b2ca4be</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>FacebookAppID</key>
 	<string>333378226850922</string>
 	<key>FacebookDisplayName</key>
